introduces CurrentEmailAddressProvider SPI in order to be able to test without a dependency on the security module